TREMENDOUS progress! I have a bug-ridden GUI displaying that doesn't properly fire its initializaer to populate the choice box.  BUt its a start - you can see widgets and a window now, and they're laid out properly.

--- a/org.msscf.sts4training/org.msscf.sts4training.javafx/src/main/resources/fxml/JavaFX.fxml
+++ b/org.msscf.sts4training/org.msscf.sts4training.javafx/src/main/resources/fxml/JavaFX.fxml
@@ -6,7 +6,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="mainAnchor" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.msscf.sts4training.javafx.ui.JavaFXController">
+<AnchorPane id="mainAnchor" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.msscf.sts4training.javafx.ui.JavaFXPresenter">
    <children>
       <GridPane id="mainGrid" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="800.0">
         <columnConstraints>
